<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BBStalker Harmony</string>
    <string name="nav_home">Home</string>
    <string name="nav_all_figures">All figures</string>
    <string name="nav_all_waves">All waves</string>
    <string name="nav_collection">Collection</string>
    <string name="nav_wishlist">Wish list</string>
    <string name="nav_detector">Reverse search</string>
    <string name="nav_help">Help</string>
    <string name="nav_config">Config</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="looking_up">Looking up...</string>
    <string name="code">"Code: "</string>
    <string name="set">"Set: "</string>
    <string name="in_collection">"in collection: "</string>
    <string name="my_collection">"My collection"</string>
    <string name="all_db">"All database"</string>
    <string name="wave">"Wave "</string>
    <string name="wishlist">My wishlist</string>
    <string name="detector">Figure Detector</string>
    <string name="json_db_err">"Error loading JSON database: I/O error or invalid JSON. If you didn\'t modify, rename or delete the original «database.json» file, please contact me (Raegdan)"</string>
    <string name="loading">Loading...</string>
    <string name="results_for">"Results for «%1$s»"</string>
    <string name="arrow_main_menu">⇧ Main menu</string>
    <string name="search_arrow">Search ⇧</string>
    <string name="version">"Version:"</string>
    <string name="author">Author:</string>
    <string name="raegdan">Raegdan</string>
    <string name="license">License:</string>
    <string name="gpl3">GNU GPL v3</string>
    <string name="github">GitHub:</string>
    <string name="githublink"><a href="https://github.com/Raegdan/bbstalker-harmony/">Go...</a></string>
    <string name="vkcom">VK.com</string>
    <string name="vkcomlink"><a href="https://vk.com/bbstalker">Go...</a></string>
    <string name="yourcollection">YOUR COLLECTION</string>
    <string name="total_figures">Total figures:</string>
    <string name="uniq_figures">Unique figures:</string>
    <string name="wished_figures">Wished figures:</string>
    <string name="about">ABOUT PROGRAM</string>
    <string name="format">"Format: "</string>
    <string name="collection_set">Collection set</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
