<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$HomeFragment"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:id="@+id/rlFH">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivFHBanner"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/banner"
        android:adjustViewBounds="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/author"
        android:id="@+id/tvFHAuthor"
        android:layout_below="@+id/tvFHVersion"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/raegdan"
        android:id="@+id/tvFHAuthorValue"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvFHAuthor"
        android:layout_alignBottom="@+id/tvFHAuthor"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/license"
        android:id="@+id/tvFHLicense"
        android:layout_below="@+id/tvFHAuthor"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gpl3"
        android:id="@+id/tvFHLicenseValue"
        android:layout_alignTop="@+id/tvFHLicense"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tvFHLicense"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/github"
        android:id="@+id/tvFHGithub"
        android:layout_below="@+id/tvFHLicense"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/githublink"
        android:id="@+id/tvFHGithubLink"
        android:layout_alignTop="@+id/tvFHGithub"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tvFHGithub"
        android:linksClickable="true"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/version"
        android:id="@+id/tvFHVersion"
        android:layout_below="@+id/tvFHAboutProgram"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvFHVersionValue"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvFHVersion"
        android:layout_alignBottom="@+id/tvFHVersion"
        android:text="0.0.0"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvFHYourCollection"
        android:layout_below="@+id/ivFHBanner"
        android:layout_alignParentLeft="true"
        android:text="@string/yourcollection"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_figures"
        android:id="@+id/tvFHTotalFigures"
        android:layout_below="@+id/tvFHYourCollection"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/uniq_figures"
        android:id="@+id/tvFHUniqFigures"
        android:layout_below="@+id/tvFHTotalFigures"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wished_figures"
        android:id="@+id/tvFHWishedFigures"
        android:layout_below="@+id/tvFHUniqFigures"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:id="@+id/tvFHTotalFiguresValue"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvFHTotalFigures"
        android:layout_alignBottom="@+id/tvFHTotalFigures"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:id="@+id/tvFHUniqFiguresValue"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvFHUniqFigures"
        android:layout_alignBottom="@+id/tvFHUniqFigures"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:id="@+id/tvFHWishedFiguresValue"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvFHWishedFigures"
        android:layout_alignBottom="@+id/tvFHWishedFigures"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about"
        android:id="@+id/tvFHAboutProgram"
        android:layout_below="@+id/tvFHWishedFigures"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vkcom"
        android:id="@+id/tvFHVK"
        android:layout_below="@+id/tvFHGithub"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vkcomlink"
        android:id="@+id/tvFHVKLink"
        android:layout_below="@+id/tvFHGithubLink"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp" />

</RelativeLayout>
